<resources>
    <string name="app_name">VeryClean</string>

    <string name="title_home">หน้าหลัก</string>
    <string name="title_dashboard">ข้อมูลการจอง</string>
    <string name="title_notifications">โปรไฟล์</string>

    <string name="app_logo">Application Logo</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_agreement">I agree to the Terms and Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Log In</string>
    <string name="skip">Skip login</string>

    <!-- Login Strings -->
    <string name="welcome">VeryClean</string>
    <string name="login_to_continue">Log in to continue to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account?</string>

    <!-- Social Login -->
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="types">ห้องทั่วไป</string>
    <string name="types1">ห้องน้ำ</string>
    <string name="Des">รายละเอียด</string>
    <string name="price">300 บาท/ชั่วโมง</string>
    <string name="price1">200 บาท/ชั่วโมง</string>

    <string name="Describe">บริการทำความสะอาดห้องทั่วไปโดยแม่บ้านมืออาชีพ ครอบคลุมการกวาด ถูพื้น ดูดฝุ่น เช็ดทำความสะอาดเฟอร์นิเจอร์ กระจก และบานประตู
        พร้อมจัดเก็บขยะและจัดระเบียบห้องให้น่าอยู่ เราใช้อุปกรณ์และน้ำยาคุณภาพดี ปลอดภัยต่อสุขภาพและเป็นมิตรต่อสิ่งแวดล้อม เพื่อให้คุณมั่นใจในความสะอาดและความสะดวกสบาย</string>
    <string name="DescribeBath">บริการทำความสะอาดห้องน้ำโดยแม่บ้านมืออาชีพ ครอบคลุมการขัดล้างพื้นและผนัง กำจัดคราบสกปรก เชื้อรา และคราบหินปูน ทำความสะอาดอ่างล้างหน้า
        โถสุขภัณฑ์ และกระจก พร้อมฆ่าเชื้อโรคและกำจัดกลิ่นไม่พึงประสงค์ เราใช้น้ำยาคุณภาพดี ปลอดภัยต่อสุขภาพและเป็นมิตรต่อสิ่งแวดล้อม เพื่อให้ห้องน้ำของคุณสะอาด สดชื่น และน่าใช้งาน</string>

</resources>